// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DownloadsAndPullSecretSection with error should render 1`] = `
<div>
  <Stack
    hasGutter={true}
  >
    <StackItem
      key="install"
    >
      <TextContent>
        <Text
          component="h2"
        >
          What you need to get started
        </Text>
        <Text
          component="h3"
        >
          OpenShift installer
        </Text>
        <Text
          component="p"
        >
          Download and extract the install program for your operating system and place the file in the directory where you will store the installation configuration files. Note: The OpenShift install program is only available for Linux and macOS at this time.
        </Text>
        <Connect(DownloadAndOSSelection)
          channel="stable"
          token={
            Object {
              "error": "my error",
            }
          }
          tool="x86_64-openshift-install"
        />
        <div>
          <DeveloperPreviewSection
            devPreviewLink="/install/pre-release"
          />
        </div>
      </TextContent>
    </StackItem>
    <StackItem
      key="pull-secret"
    >
      <TextContent>
        <Text
          component="h3"
        >
          Pull secret
        </Text>
        <PullSecretSection
          token={
            Object {
              "error": "my error",
            }
          }
        />
      </TextContent>
    </StackItem>
    <StackItem
      key="cli"
    >
      <TextContent>
        <Text
          component="h3"
        >
          Command line interface
        </Text>
        <CLISection
          channel="stable"
          isBMIPI={false}
          token={
            Object {
              "error": "my error",
            }
          }
        />
      </TextContent>
    </StackItem>
  </Stack>
</div>
`;

exports[`DownloadsAndPullSecretSection with token should render 1`] = `
<div>
  <Stack
    hasGutter={true}
  >
    <StackItem
      key="install"
    >
      <TextContent>
        <Text
          component="h2"
        >
          What you need to get started
        </Text>
        <Text
          component="h3"
        >
          OpenShift installer
        </Text>
        <Text
          component="p"
        >
          Download and extract the install program for your operating system and place the file in the directory where you will store the installation configuration files. Note: The OpenShift install program is only available for Linux and macOS at this time.
        </Text>
        <Connect(DownloadAndOSSelection)
          channel="stable"
          token={
            Object {
              "auths": Object {
                "foo": "bar",
              },
            }
          }
          tool="x86_64-openshift-install"
        />
        <div>
          <DeveloperPreviewSection
            devPreviewLink="/install/pre-release"
          />
        </div>
      </TextContent>
    </StackItem>
    <StackItem
      key="pull-secret"
    >
      <TextContent>
        <Text
          component="h3"
        >
          Pull secret
        </Text>
        <PullSecretSection
          token={
            Object {
              "auths": Object {
                "foo": "bar",
              },
            }
          }
        />
      </TextContent>
    </StackItem>
    <StackItem
      key="cli"
    >
      <TextContent>
        <Text
          component="h3"
        >
          Command line interface
        </Text>
        <CLISection
          channel="stable"
          isBMIPI={false}
          token={
            Object {
              "auths": Object {
                "foo": "bar",
              },
            }
          }
        />
      </TextContent>
    </StackItem>
  </Stack>
</div>
`;
